<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_nothing"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_nothing"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_editAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_nothing"
        android:inputType="number" />

    <RadioGroup
        android:id="@+id/radioGroup_editEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio_editElementarySchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_elementary_school" />

        <RadioButton
            android:id="@+id/radio_editHighSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_high_school" />

        <RadioButton
            android:id="@+id/radio_editGraduated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_graduated" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_save" />

</LinearLayout>
