<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_id"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nothing"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_year"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nothing"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_propositor"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_propositor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nothing"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_menu_proposition"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_nothing"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <com.github.mikephil.charting.charts.PieChart
	        android:id="@+id/chart1"
	        android:layout_width="wrap_content"
	        android:layout_height="350dp" />
        
        <com.github.mikephil.charting.charts.PieChart
	        android:id="@+id/chart2"
	        android:layout_width="wrap_content"
	        android:layout_height="350dp" />

	    <com.github.mikephil.charting.charts.PieChart
	        android:id="@+id/chart3"
	        android:layout_width="fill_parent"
	        android:layout_height="350dp" />

	</LinearLayout>
</ScrollView>